# tech-idea-digest

./: .gitignore  PROGRESS.md  README.md  pyproject.toml  sources.yaml
.github/workflows/: daily-tech-digest.yml
docs/: setup-github-actions.md
docs/plans/: 2026-04-30-tech-idea-digest.md
tech_idea_digest/: __init__.py  __main__.py  classifier.py  collectors.py  config.py  emailer.py  models.py  ranker.py  render.py
tests/: test_classify_rank.py  test_cli.py  test_collectors.py  test_config.py  test_render.py
